security-lab/myapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    purpose: test-security
spec:
  serviceAccountName: my-service-account 
  volumes:
  - name: my-sql
    secret:
      secretName: top-secret
#  securityContext:
#    runAsUser: 1000
  containers:
  - image: nginx
    name: my-server
  - image: busybox
    name: busy
    command:
    - sleep
    - "3600"
    volumeMounts:
    - name: my-sql
      mountPath: "/mysqlpassword"
    securityContext:
      runAsUser: 2000
      allowPrivilegeEscalation: false
      capabilities:
        add: ["SYS_TIME", "NET_ADMIN"]
