security-lab/sec-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sec-deploy
  name: sec-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sec-deploy
      deny: authorize
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sec-deploy
        deny: authorize
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
