security-lab/security-review1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: securityreview
spec:
  volumes:
  - name: cache
    emptyDir: {}
  - name: run
    emptyDir: {}
  securityContext:
    runAsUser: 2100
  containers:
  - name:  webguy
    image: nginx
    volumeMounts:
    - name: run
      mountPath: /var/run
    - name: cache
      mountPath: /var/cache/nginx
    securityContext:
      runAsUser: 0
      allowPrivilegeEscalation: false
