security-lab/sec-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sec-policy
spec:
  podSelector:
    matchLabels:
      deny: authorize
  policyTypes:
  - Ingress
  ingress:
    - from:
      ports:
      - protocol: TCP
        port: 80
